# SIKI_2

./: CMakeLists.txt  Client.cpp  Client.h  README.md  Server.cpp  Server.h  detailed_description_in_polish.txt  main.cpp  makefile
Wysylanie/mg394321/: Server.h
Zadanie2_materiały/: client.c  makefile  server.c
Zadanie2_materiały/Orginalne_lab8/: Makefile  multi-recv.c  multi-send.c
